k8s/psql-utility.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql
  namespace: crm-rfm
  labels:
    app: psql-utility
spec:
  restartPolicy: Never
  containers:
    - name: psql
      image: postgres:18-alpine
      command: ["sleep", "infinity"]
