k8s/haproxy-ingress-controller.yaml
# HAProxy Ingress Controller Installation
# HAProxy is a high-performance load balancer that can be used as an Ingress controller
# This provides an alternative to nginx-ingress for routing HTTP/HTTPS traffic
#
# Installation:
#   kubectl apply -f k8s/haproxy-ingress-controller.yaml
#
# After installation, wait for the controller to be ready:
#   kubectl wait --namespace haproxy-ingress \
#     --for=condition=ready pod \
#     --selector=app.kubernetes.io/name=haproxy-ingress \
#     --timeout=300s
#
# The controller will be exposed as a NodePort service by default.
# For LoadBalancer access, use MetalLB or change the service type.

apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-ingress
  labels:
    app.kubernetes.io/name: haproxy-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress
  namespace: haproxy-ingress
  labels:
    app.kubernetes.io/name: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: haproxy-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: haproxy-ingress
    spec:
      serviceAccountName: haproxy-ingress
      containers:
      - name: controller
        image: quay.io/haproxytech/kubernetes-ingress:1.10.2
        imagePullPolicy: IfNotPresent
        args:
        - --configmap=haproxy-ingress/haproxy-ingress
        - --default-backend-service=haproxy-ingress/haproxy-ingress-default-backend
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1024
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
  namespace: haproxy-ingress
  labels:
    app.kubernetes.io/name: haproxy-ingress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30444
      protocol: TCP
    - name: stat
      port: 1024
      targetPort: 1024
      nodePort: 31024
      protocol: TCP
  selector:
    app.kubernetes.io/name: haproxy-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress-default-backend
  namespace: haproxy-ingress
  labels:
    app.kubernetes.io/name: haproxy-ingress
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: haproxy-ingress-default-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress-default-backend
  namespace: haproxy-ingress
  labels:
    app.kubernetes.io/name: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: haproxy-ingress-default-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: haproxy-ingress-default-backend
    spec:
      containers:
      - name: default-backend
        image: k8s.gcr.io/defaultbackend-amd64:1.5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  labels:
    app.kubernetes.io/name: haproxy-ingress
spec:
  controller: haproxy.org/ingress-controller
